--- a/Komandro/assets/css/style.css
+++ b/Komandro/assets/css/style.css
@@ -3942,7 +3942,7 @@ textarea.form-control-lg {
 .navbar-brand {
   display:flex;
   align-items:center;
-  margin-right: 1rem;
+  margin: 10px 10px 10px 10px;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
@@ -11283,6 +11283,11 @@ textarea.form-control-lg {
 .App-buttondearu:hover {
   color: var(--background);
   background: linear-gradient(to right, var(--primary), var(--accent));
+}
+
+#faq{
+  margin-bottom: 5rem;
+  margin-top: 5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
