--- a/Komandro/style.css
+++ b/Komandro/style.css
@@ -6,5 +6,48 @@
     --secondary: #124515;
     --accent: #51d259;
   }
+
+   /* Style the dropdown button */
+
+  /* Style the dropdown content (hidden by default) */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: rgb(47, 45, 45);
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+
+  /* Style the dropdown content when it is shown */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--accent);
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 5;
+  }
+
+  /* Style the links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: var(--primary);
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
   
   
