--- a/Komandro/assets/css/styleabout.css
+++ b/Komandro/assets/css/styleabout.css
@@ -130,3 +130,24 @@
   padding: 0;
   list-style-type: none;
 }
+
+
+
+
+.icon {
+  width: 3rem;
+  height: 3rem;
+}
+
+.icon i {
+  font-size: 2.25rem;
+}
+
+.icon-shape {
+  display: inline-flex;
+  padding: 12px;
+  text-align: center;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
